Avoid long tile titles wrapping and being clipped

--- a/styles/main.less
+++ b/styles/main.less
@@ -752,6 +752,8 @@ body {
    text-shadow: 1px 1px 0 rgba(0,0,0,.01);
    z-index: 2;
    overflow: hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
 }
 
 .item-subtitle {
